[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-launcher"
version = "3.0.0"
description = "Bilingual launcher for AI coding agents (Codex & Claude) with review and loop modes"
readme = "README.md"
authors = [
    {name = "Actigence Management Consulting", email = "hello@actigence.eu"}
]
maintainers = [
    {name = "Actigence Management Consulting", email = "hello@actigence.eu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Environment :: Console",
    "Natural Language :: English",
    "Natural Language :: French",
]
keywords = [
    "ai",
    "codex",
    "claude",
    "code-generation",
    "automation",
    "cli",
    "launcher",
    "code-review",
    "agent",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]

[project.urls]
Homepage = "https://actigence.eu"
Documentation = "https://github.com/Actigence-Code/agent-launcher#readme"
Repository = "https://github.com/Actigence-Code/agent-launcher.git"
"Bug Tracker" = "https://github.com/Actigence-Code/agent-launcher/issues"
Changelog = "https://github.com/Actigence-Code/agent-launcher/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/Actigence-Code/agent-launcher"
Contact = "mailto:hello@actigence.eu"

[project.scripts]
agent = "agent:main"

[tool.setuptools]
py-modules = ["agent"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=agent --cov-report=term-missing"
testpaths = ["tests"]
